# sagittal_average

./: .gitignore  LICENSE.md  brain_average.csv  brain_expected.csv  pyproject.toml  setup.py  test_call_command.py  test_sagittal_brain.py
. github/workflows/: github-actions-demo.yml
.github/workflows/: docs2gh.yml  pytest.yml
Sagittal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Sagittal_Average/: command.py
Sagittal_Average/tests/: test_sth.py
brain_sagittal_averaging/: test__data_sagittal_brain.py
lessons-package/test/: test_sagittal_brain.py
sagittal/: sagittal_brain.py
sagittal/test/: test_sagittal_brain.py
sagittal_average/: command.py  sagittal_brain.py
sagittal_average.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
sagittal_average/test/: test_sagittal_brain.py
